--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A simple task list application." />
+    <link rel="stylesheet" href="style.css" />
     <title>Tasks</title>
   </head>
   <body>
